[package]
name = "x112virtgpu"
version = "0.1.0"
edition = "2021"

[workspace]
members =  ["preload", "util", "wrapper", "."]

[dependencies]
nix = { version = "0.29", features = ["event", "socket", "ioctl", "mman", "socket", "uio", "fs", "ptrace", "signal", "user"] }
anyhow = "1"
util = { path = "util" }
clap = { version = "4.5.19", features = ["derive"] }
